workspace/operators/v2/valuation/owner_earnings.md
---
id: owner_earnings
name: 巴菲特所有者收益计算
category: valuation
tags:
- valuation
- fcf
- owner_earnings
- buffett
data_needed:
- income
- cashflow
- balancesheet
gate:
  exclude_industry:
  - 银行
  - 保险
  - 证券
  - 多元金融
outputs:
- field: owner_earnings
  type: float
  desc: 所有者收益(亿元)
- field: owner_earnings_formula
  type: str
  desc: 所有者收益计算公式明细
- field: fcf
  type: float
  desc: 自由现金流(亿元)
- field: maintenance_capex
  type: float
  desc: 维持性资本支出(亿元)
- field: owner_earnings_valid
  type: bool
  desc: 所有者收益计算是否有效(负值时为false)
---

## 巴菲特所有者收益(Owner Earnings)计算

> **与 valuation_fcf 的关系**：本算子计算巴菲特式"股东盈余"（Owner Earnings），侧重于维持性CAPEX的估算和利润质量验证。valuation_fcf 算子负责完整的FCF估值体系（EV/FCF倍数分档、多维估值矩阵）。两者的FCF计算可能产生不同结果——当出现差异时，以本算子的 Owner Earnings 作为利润质量基准，以 valuation_fcf 的估值框架作为定价基准。

### 零、金融行业适用性判断（前置门控）

**银行、保险、证券、多元金融行业不适用标准所有者收益计算。** 金融企业的折旧摊销占比极低，维持性 CAPEX 概念不适用（其"资本支出"是信贷投放/保费准备金等），标准公式会产生误导性结果。

```
前置检查（必须首先执行）：
├── 行业属于 银行/保险/证券/多元金融？
│   └── 是 → 停止标准所有者收益计算，改用以下替代：
│       ├── 银行：拨备前利润(PPOP) = 营业收入 - 业务管理费
│       │        可分配利润 ≈ 净利润 × (1 - 资本补充需求比例)
│       ├── 保险：调整后净资产收益 + 新业务价值
│       └── 证券：净利润（周期平滑3-5年均值）
│   └── 否 → 继续下方标准计算流程
```

**输出要求**：若触发金融行业门控，`owner_earnings` 填替代方法计算值，`owner_earnings_formula` 明确标注"金融行业替代方法"及具体公式，`fcf` 填 0（不适用），`maintenance_capex` 填 0（不适用）。

### 负Owner Earnings处理

当计算出的Owner Earnings为负时：

1. **检查原因**：是维持性CAPEX估算过高，还是经营利润本身为负？
2. **调整维持性CAPEX**：若问题在CAPEX估算，尝试使用折旧额作为维持性CAPEX的下限重新计算
3. **使用EBITDA替代**：若调整后仍为负，以EBITDA作为利润质量的参考指标
4. **标记**：在输出中标注 `owner_earnings_valid: false`，并说明原因

### 一、核心公式

```
所有者收益(Owner Earnings) =
    净利润
    + 折旧/摊销
    + 非现金减值（商誉减值、资产减值等）
    - 维持性资本支出（非扩张性CAPEX）
    = 真实可分配给股东的现金
```

**巴菲特原话**："所有者收益是净利润加上折旧、摊销等非现金费用，减去企业为维持竞争地位和产量所需的年均资本支出。"

**为什么需要所有者收益？**
- 净利润被折旧、摊销、减值等非现金项目严重扭曲
- 重资产行业（乳业、制造、公用事业）净利润远低于真实造血能力
- 商誉减值是一次性非现金支出，不影响持续经营现金流

### 二、逐步计算流程

#### 步骤1：获取净利润

```
来源：利润表"归属于母公司股东的净利润"
填写：净利润 = [ ]亿元
注意：若存在少数股东损益较大，需考虑是否用"归母净利润"还是"全口径净利润"
```

#### 步骤2：加回折旧与摊销

```
来源：现金流量表"固定资产折旧"+"无形资产摊销"+"长期待摊费用摊销"
      或利润表附注中的折旧摊销明细
填写：折旧摊销 = [ ]亿元
注意：折旧摊销是真实的非现金支出，必须全额加回
```

#### 步骤3：加回非现金减值

```
来源：利润表"资产减值损失"+"信用减值损失"
      重点关注：商誉减值、固定资产减值、存货跌价准备
填写：非现金减值 = [ ]亿元

判断标准：
- 商誉减值：一次性的、非经营性的 -> 全额加回
- 存货跌价：如为行业周期性正常波动 -> 加回
- 应收坏账：如为激进计提（超同行水平）-> 部分加回
- 固定资产减值：如因政策关停而非正常损耗 -> 加回
```

#### 步骤4：减去维持性资本支出

```
来源：现金流量表"购建固定资产、无形资产等支付的现金"
      但需拆分为维持性与扩张性

维持性CAPEX估算方法：
1. 折旧近似法：成熟企业的维持性CAPEX约等于折旧额
2. 历史平均法：5年平均CAPEX排除异常扩张年份
3. 管理层拆分法：部分公司在年报中拆分maintenance/growth CAPEX
4. 同行对比法：参考同行业成熟企业的CAPEX/收入比

填写：维持性CAPEX = [ ]亿元
说明估算依据：[ ]
```

#### 步骤5：汇总计算

```
所有者收益计算表：
  净利润：            [ ]亿元
+ 折旧摊销：          [ ]亿元
+ 非现金减值：        [ ]亿元
- 维持性CAPEX：       [ ]亿元
─────────────────────────
= 所有者收益：        [ ]亿元

所有者收益/净利润 = [ ]倍
（该倍数反映非现金项目对利润的扭曲程度）
```

### 三、与报告FCF的交叉验证

所有者收益和财报自由现金流(reported FCF)应进行交叉验证：

```
报告FCF = 经营活动现金流 - 全部CAPEX
所有者收益 = 净利润 + 折旧摊销 + 非现金减值 - 维持性CAPEX

验证关系：
- 正常情况：所有者收益 > 报告FCF（因为报告FCF含扩张性CAPEX）
- 异常信号：所有者收益 < 报告FCF -> 检查营运资本变动是否异常
```

| 对比结果 | 含义 | 行动 |
|---------|------|------|
| 所有者收益 > 报告FCF，且差距合理 | 正常，差额为扩张性CAPEX | 两者均可参考 |
| 所有者收益远大于报告FCF | 公司在大幅扩张 | 评估扩张回报率 |
| 所有者收益 < 报告FCF | 营运资本释放或非经营性收入 | 深入调查原因 |
| 两者均远大于净利润 | 非现金项目扭曲严重 | 以所有者收益为准估值 |

### 四、常见陷阱与注意事项

1. **不要加回经营性减值**：正常经营中合理的存货跌价（如季节性产品过期）不应加回
2. **区分一次性与持续性**：商誉减值通常一次性（加回），但若公司连续多年减值，说明收购决策系统性失误
3. **维持性CAPEX不等于零**：即使轻资产公司也有维持性支出（服务器、办公设备等）
4. **研发费用化**：中国会计准则下部分研发费用化处理，不在CAPEX中，但属于维持竞争力的必要支出
5. **合并报表影响**：关注少数股东损益比例，高少数股东占比时需调整

### 五、所有者收益估值应用

```
所有者收益收益率 = 所有者收益 / 市值 x 100%

评级标准（阈值已与策略统一标准对齐）：
> 12%：极度低估（通常伴随市场恐慌或结构性折价）
8-12%：显著低估
5-8%：合理偏低
3-5%：合理
< 3%：偏贵

EV/所有者收益 = (市值 - 净现金) / 所有者收益
（参考EV/FCF五档评级标准）
```

### 六、完整评估模板

```
所有者收益评估：
1. 净利润：[ ]亿元
2. + 折旧摊销：[ ]亿元
3. + 非现金减值：[ ]亿元（明细：[ ]）
4. - 维持性CAPEX：[ ]亿元（估算方法：[ ]）
5. = 所有者收益：[ ]亿元
6. 所有者收益/净利润 = [ ]倍（扭曲程度）
7. 报告FCF：[ ]亿元
8. 所有者收益 vs 报告FCF差异：[ ]亿元（原因：[ ]）
9. 所有者收益收益率：[ ]%
10. 结论：[ ]
```
